# xianyu-fish-chat

./: README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
frontend/: .gitignore  .prettierrc.json  README.md  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/.storybook/: DocumentationTemplate.mdx  main.ts  preview.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConvList.tsx  NoSSR.tsx  SearchArea.tsx  Sidebar.tsx  Titlebar.tsx  index.ts
frontend/components/layout/: index.tsx
frontend/components/layout/AbsoluteCenter/: AbsuluteCenter.stories.tsx  index.tsx
frontend/components/layout/absolute-center/: absolute-center.stories.tsx  absolute-center.tsx  index.ts
frontend/components/layout/anchor/: anchor.stories.tsx  anchor.tsx
frontend/components/layout/aspect-ratio/: aspect-ratio.stories.tsx  aspect-ratio.tsx
frontend/components/layout/box/: box.stories.tsx  box.tsx  index.ts
frontend/components/sidebar/: index.ts  sidebar.stories.tsx  sidebar.tsx
frontend/components/theme/: getNextTheme.spec.ts  theme-provider.tsx  theme-toggle.tsx  theme.stories.tsx
frontend/components/titlebar/: index.ts  titlebar-control-button.tsx  titlebar.stories.tsx  titlebar.tsx
frontend/lib/: utils.ts
frontend/utils/: cn.ts
img/icons/: icon.icns
src/: inject.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  main.rs  shortcut.rs  state.rs  tray.rs
(+9 files in other folders)
